# hatanaka

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/: codecov.yml  pip.py
.github/workflows/: build.yml  publish.yml  test.yml
hatanaka/: __init__.py  cli.py  entry_points.py  general_compression.py  hatanaka.py
hatanaka/test/: conftest.py  pytest.ini  sample.crx  test_cli.py  test_general_compression.py  test_hatanaka.py  test_on_disk_functions.py
hatanaka/test/data/: sample.crx.Z  sample.crx.bz2  sample.rnx.Z  sample.rnx.bz2
rnxcmp/docs/: CHANGES.md  README.txt  RNXCMP.txt
rnxcmp/front-end-tools/unix/: CRZ2RNX  RNX2CRZ
rnxcmp/source/: crx2rnx.c  rnx2crx.c
