[metadata]
name = hatanaka
version = 4.0.8.0
author = Martin Valgur
author_email = martin.valgur@gmail.com
url = https://github.com/valgur/hatanaka
description = Compress/decompress RINEX observation files with Hatanaka compression
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
keywords =
    RINEX
    Hatanaka compression
    GNSS
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
python_requires = >= 3.6
include_package_data = True
zip_safe = False
packages = find:
install_requires = importlib_resources

[options.extras_require]
tests = pytest

[options.package_data]
hatanaka.bin = *
hatanaka.test = *.rnx, *.crx

[options.entry_points]
console_scripts =
    rnx2crx = hatanaka.entry_points:rnx2crx
    crx2rnx = hatanaka.entry_points:crx2rnx
