[metadata]
name = hatanaka
version = 2.8.1
author = Martin Valgur
author_email = martin.valgur@gmail.com
url = https://github.com/valgur/hatanaka
description = Effortlessly compress / decompress any RINEX file
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
keywords =
    RINEX
    Hatanaka compression
    GNSS
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Environment :: Console
    Topic :: Scientific/Engineering

[options]
python_requires = >= 3.6
include_package_data = True
zip_safe = False
packages = find:
install_requires =
    importlib_resources
    ncompress

[options.extras_require]
tests = pytest
dev = pytest

[options.package_data]
hatanaka.bin = *
hatanaka.test.data = *

[options.entry_points]
console_scripts =
    rinex-decompress = hatanaka.cli:decompress_cli
    rinex-compress = hatanaka.cli:compress_cli
    rnx2crx = hatanaka.cli:rnx2crx
    crx2rnx = hatanaka.cli:crx2rnx
